Fixed font on mobile

--- a/huebyte/src/pages/homepage/Homepage.scss
+++ b/huebyte/src/pages/homepage/Homepage.scss
@@ -343,6 +343,12 @@
 
 @media screen and (max-width: 540px) {
   .homepage-container {
+    .whoami {
+      .text {
+        font-size: 1rem;
+      }
+    }
+
     .skills-container {
       .skills {
         .item {
